# followupper

./: .env.example  README.md  SETUP.md  alembic.ini  encryption.key  followupper.db  main.py  pyproject.toml  requirements.txt
frontend/: nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/assets/css/: tailwind.css
frontend/app/composables/: useApi.js
frontend/app/layouts/: default.vue
frontend/app/pages/: contacts.vue  index.vue  schedule.vue  sequences.vue  settings.vue  templates.vue
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_sequence_system.py  d98c3aa6ba05_update_platform_credentials_to_plain_.py  eccd7e238699_remove_platform_from_message_templates.py
src/: __init__.py  api.py  app.py
src/gui/: contact_dialog.py  contacts_widget.py  main_window.py  schedule_widget.py  settings_widget.py  template_dialog.py  templates_widget.py
src/models/: __init__.py  contact.py  contact_sequence_assignment.py  database.py  followup_sequence.py  followup_sequence_step.py  message_template.py  platform_credentials.py  scheduled_followup.py
src/scheduler/: __init__.py  followup_scheduler.py
